--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   "author": "Corey Wallis <corey@techxplorer.com>",
   "license": "ISC",
   "devDependencies": {
-    "bulma": "^0.9.2",
     "eslint": "^7.20.0",
     "eslint-config-jquery": "^3.0.0",
-    "feather-icons": "^4.28.0",
-    "jquery": "^3.5.1",
-    "postinstall": "^0.7.0"
+    "jquery": "^3.5.1"
   },
   "postinstall": {
     "node_modules/bulma/*": "copy assets/css/bulma/",
     "node_modules/feather-icons/dist/feather.js": "copy assets/js/",
     "node_modules/jquery/dist/jquery.js": "copy assets/js/",
-    "node_modules/jquery/dist/jquery.slim.js": "copy assets/js/"
+    "node_modules/jquery/dist/jquery.slim.js": "copy assets/js/",
+    "node_modules/tinysort/dist/tinysort.min.js": "copy assets/js/"
+  },
+  "dependencies": {
+    "bulma": "^0.9.2",
+    "feather-icons": "^4.28.0",
+    "postinstall": "^0.7.0",
+    "tinysort": "^3.2.7"
   }
 }
