--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "browser": true
   },
   "globals": {
-    "feather": "readonly"
+    "feather": "readonly",
+    "tinysort": "readonly"
   },
   "extends": [
     "eslint:recommended",
